--- a/_source/stylesheets/partials/layout/_header.sass
+++ b/_source/stylesheets/partials/layout/_header.sass
@@ -3,7 +3,7 @@
     +columns(8)
   .nav
     +columns(10)
-    min-width: 420px
+    min-width: 450px
   .nav, .aside
     float: right
   .aside
